# hack_template

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build_and_push.yml  checks.yml
hack_template/: __main__.py
hack_template/adapters/: di.py  passgen.py
hack_template/adapters/amqp/: broker.py
hack_template/adapters/database/: __main__.py  base.py  config.py  di.py  tables.py  uow.py  utils.py
hack_template/adapters/database/migrations/: env.py
hack_template/adapters/database/migrations/versions/: 2024_09_11_07f32762e28b_initial_migration.py
hack_template/adapters/database/storages/: user.py  users.py
hack_template/adapters/smtp/: sender.py
hack_template/application/: config.py
hack_template/application/common/: exceptions.py
hack_template/domains/: di.py  uow.py
hack_template/domains/entities/: users.py
hack_template/domains/interfaces/: passgen.py
hack_template/domains/interfaces/storages/: user.py
hack_template/domains/services/: user.py
hack_template/domains/use_cases/: fetch_user_by_id.py  register_user.py
hack_template/domains/use_cases/handlers/: register_user.py
hack_template/domains/use_cases/queries/: fetch_user_by_id.py  fetch_user_list.py
hack_template/domains/users/: service.py  storage.py
hack_template/presentors/amqp/: app.py  config.py  controllers.py  service.py
hack_template/presentors/rest/: config.py  cors.py  docs.py  handlers.py  service.py
hack_template/presentors/rest/routers/api/v1/users/: controller.py  schemas.py  urls.py
