[tool.poetry]
name = "hack-template"
version = "0.1.0"
description = ""
authors = ["Sergey Natalenko <sergey.natalenko@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = "^2.11.0"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
aiomisc = {extras = ["aiohttp", "asgi", "cron", "uvicorn"], version = "^17.5.26"}
dishka = "^1.3.0"
faststream = {extras = ["rabbitmq"], version = "^0.5.22"}
aiosmtplib = "^3.0.2"
hasql = "^0.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "8.2"
aiomisc-pytest = "^1.2.1"
mypy = "^1.11.2"
pre-commit = "^3.8.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"
dirty-equals = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "test_*"
python_functions = "test_*"
python_classes = "TestSuite*"
addopts = "-p no:cacheprovider"

[tool.coverage.run]
branch = true
source = ["hack_template"]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
]
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "BLE",
    "C90",
    "E",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "PLE",
    "Q",
    "RUF006",
    "RUF100",
    "T10",
    "T20",
    "TID",
    "UP",
    "W",
]
ignore = ["ISC001"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["wallet", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
]
ignore_missing_imports = true